--- a/backend/package.json
+++ b/backend/package.json
@@ -5,5 +5,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
